--- a/_modules/analysis/material_manager.html
+++ b/_modules/analysis/material_manager.html
@@ -88,7 +88,7 @@
 <span class="sd">    Manages materials by reading their properties from a CSV file and creating Material objects.</span>
 <span class="sd">    </span>
 <span class="sd">    Attributes:</span>
-<span class="sd">        experiment_name (str): Name of the experiment.</span>
+<span class="sd">        experiment_name (str): String used to identify each experiment.</span>
 <span class="sd">        run_id (int): Identifier for the run.</span>
 <span class="sd">        material_data_path (str): Path to the CSV file with material properties.</span>
 <span class="sd">        materials_df (pd.DataFrame): DataFrame containing the material properties.</span>
@@ -101,27 +101,10 @@
 <span class="sd">        Initializes the material_manager with the given experiment name and run ID.</span>
 <span class="sd">        </span>
 <span class="sd">        Args:</span>
-<span class="sd">            experiment_name (str): Name of the experiment.</span>
+<span class="sd">            experiment_name (str): String used to identify each experiment.</span>
 <span class="sd">            run_id (int): Identifier for the run.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-		<span class="c1"># self.material_data_path = &#39;/workspace/data_files/bulk_materials.csv&#39;</span>
-		<span class="c1"># self.material_data_path = &#39;/workspace/data_files/data/copperplates_06.23.2022/bulk_materials _copperplates_06232022.csv&#39;</span>
-		<span class="c1"># self.material_data_path = &#39;/workspace/data_files/data/beam_direction_06.30.2022/bulk_materials _copperplates_06302022.csv&#39;</span>
-		<span class="c1"># self.material_data_path = &#39;/workspace/data_files/data/silica_window_07.18.2022/bulk_materials _silica_window_07182022.csv&#39;</span>
-		<span class="c1"># self.material_data_path = &#39;/workspace/data_files/data/source_copperholder_08.16.2022/bulk_materials __sourceCu_holder_08162022.csv&#39;</span>
-		<span class="c1"># self.material_data_path = &#39;/workspace/data_files/data/copper_gasket_08.29.2022/bulk_materials _coppergasket_08292022.csv&#39;</span>
-		<span class="c1"># self.material_data_path = &#39;/workspace/data_files/data/Al_filler_02.07.2023/bulk_materials _Alfiller_02072023.csv&#39;</span>
-		<span class="c1"># self.material_data_path = &#39;/workspace/data_files/data/sourcepart_05.11.2023/bulk_materials _sourcepart_05112023.csv&#39;</span>
-		<span class="c1"># self.material_data_path =&#39;/workspace/data_files/data/Sebastian_teflon_05.12 .2023/bulk_materials _Sebastian_teflon_0512.csv&#39;</span>
-		<span class="c1"># self.material_data_path = &#39;/workspace/data_files/data/Sebastian_teflon_05.23.2023/bulk_materials _Sebastian_teflon_0523.csv&#39;</span>
-		<span class="c1"># self.material_data_path = &#39;/workspace/data_files/data/Sebastian_teflon_upperlimit_06.05.2023/bulk_materials _Sebastian_teflon_upper_0605.csv&#39;</span>
-		<span class="c1"># self.material_data_path = &#39;/workspace/data_files/data/Sebastian_flippedsource_06.06.2023/bulk_materials _Sebastian_teflon_FS_0606.csv&#39;</span>
-		<span class="c1"># self.material_data_path = &#39;/workspace/data_files/data/Sebastian_FS_06.08.2023_correctedSiPM/bulk_materials _Sebastian_teflon_FS_0608_corrected.csv&#39;</span>
-		<span class="c1"># self.material_data_path = &#39;/workspace/data_files/data/Sebastian_03.31.2023(liquefaction_corrrectedSiPM)/bulk_materials _Sebastian_03312023_corrected.csv&#39;</span>
-		<span class="c1"># self.material_data_path =&#39;/workspace/data_files/data/Sebastian_05.18.2023(liquefaction)_correctedSiPM/bulk_materials _Sebastian_teflon_0518_corrected.csv&#39;</span>
-		<span class="c1"># self.material_data_path =&#39;/workspace/data_files/data/Sebastian_07.20.2022(liquefaction)_corrrectedSiPM/bulk_materials _Sebastian_07202022_corrected.csv&#39;</span>
-		<span class="c1">#self.material_data_path = &#39;/workspace/data_files/data/Sebastian_08.01.2023(liquefaction)_correctedSiPM/bulk_materials _Sebastian_Pdreflector_0801_corrected.csv&#39;</span>
-	
+
 		<span class="bp">self</span><span class="o">.</span><span class="n">material_data_path</span> <span class="o">=</span> <span class="s1">&#39;/workspace/data_files/data/&#39;</span> <span class="o">+</span> <span class="n">experiment_name</span> <span class="o">+</span> <span class="s1">&#39;/bulk_materials_&#39;</span> <span class="o">+</span> <span class="n">experiment_name</span> <span class="o">+</span> <span class="s1">&#39;.csv&#39;</span>
 	
 		<span class="bp">self</span><span class="o">.</span><span class="n">run_id</span> <span class="o">=</span> <span class="n">run_id</span>
@@ -235,7 +218,7 @@
 <a class="viewcode-back" href="../../source/analysis.html#analysis.material_manager.material_manager.get_material">[docs]</a>
 	<span class="k">def</span> <span class="nf">get_material</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">material_name</span><span class="p">):</span>
 <span class="w">		</span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Retrieves the Material object for a given material name.</span>
+<span class="sd">        Retrieves the Material object for a given material name from the created materials dictionary.</span>
 <span class="sd">        </span>
 <span class="sd">        Args:</span>
 <span class="sd">            material_name (str): The name of the material.</span>
