--- a/_modules/index.html
+++ b/_modules/index.html
@@ -70,7 +70,8 @@
            <div itemprop="articleBody">
              
   <h1>All modules for which code is available</h1>
-<ul><li><a href="analysis/analysis_manager.html">analysis.analysis_manager</a></li>
+<ul><li><a href="ExampleAnalysis.html">ExampleAnalysis</a></li>
+<li><a href="analysis/analysis_manager.html">analysis.analysis_manager</a></li>
 <li><a href="analysis/geometry_manager.html">analysis.geometry_manager</a></li>
 <li><a href="analysis/material_manager.html">analysis.material_manager</a></li>
 <li><a href="analysis/run_manager.html">analysis.run_manager</a></li>
