--- a/genindex.html
+++ b/genindex.html
@@ -206,10 +206,17 @@
 </li>
       <li><a href="analysis.html#analysis.analysis_manager.analysis_manager.emit_angle">emit_angle (analysis.analysis_manager.analysis_manager attribute)</a>, <a href="source/analysis.html#analysis.analysis_manager.analysis_manager.emit_angle">[1]</a>
 </li>
-      <li><a href="analysis.html#analysis.analysis_manager.analysis_manager.execute_plots">execute_plots() (analysis.analysis_manager.analysis_manager method)</a>, <a href="source/analysis.html#analysis.analysis_manager.analysis_manager.execute_plots">[1]</a>
+      <li>
+    ExampleAnalysis
+
+      <ul>
+        <li><a href="source/ExampleAnalysis.html#module-ExampleAnalysis">module</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="analysis.html#analysis.analysis_manager.analysis_manager.execute_plots">execute_plots() (analysis.analysis_manager.analysis_manager method)</a>, <a href="source/analysis.html#analysis.analysis_manager.analysis_manager.execute_plots">[1]</a>
+</li>
       <li><a href="analysis.html#analysis.analysis_manager.analysis_manager.experiment_name">experiment_name (analysis.analysis_manager.analysis_manager attribute)</a>, <a href="source/analysis.html#analysis.analysis_manager.analysis_manager.experiment_name">[1]</a>
 
       <ul>
@@ -295,8 +302,12 @@
         <li><a href="source/main.html#module-main">module</a>
 </li>
       </ul></li>
-      <li><a href="source/main.html#main.main">main() (in module main)</a>
+      <li><a href="source/ExampleAnalysis.html#ExampleAnalysis.main">main() (in module ExampleAnalysis)</a>
+
+      <ul>
+        <li><a href="source/main.html#main.main">(in module main)</a>
 </li>
+      </ul></li>
       <li><a href="analysis.html#analysis.geometry_manager.geometry_manager.mat_manager">mat_manager (analysis.geometry_manager.geometry_manager attribute)</a>, <a href="source/analysis.html#analysis.geometry_manager.geometry_manager.mat_manager">[1]</a>
 </li>
       <li><a href="analysis.html#analysis.material_manager.material_manager.material_data_path">material_data_path (analysis.material_manager.material_manager attribute)</a>, <a href="source/analysis.html#analysis.material_manager.material_manager.material_data_path">[1]</a>
@@ -328,6 +339,8 @@
         <li><a href="analysis.html#module-analysis.surface_manager">analysis.surface_manager</a>, <a href="source/analysis.html#module-analysis.surface_manager">[1]</a>
 </li>
         <li><a href="analysis.html#module-analysis.test_chroma">analysis.test_chroma</a>, <a href="source/analysis.html#module-analysis.test_chroma">[1]</a>
+</li>
+        <li><a href="source/ExampleAnalysis.html#module-ExampleAnalysis">ExampleAnalysis</a>
 </li>
         <li><a href="source/main.html#module-main">main</a>
 </li>
